--- a/src/app/shared/css/theme.css
+++ b/src/app/shared/css/theme.css
@@ -171,3 +171,7 @@
 .p-fileupload {
   margin-top: 20px !important;
 }
+
+::ng-deep .p-badge-circle {
+  cursor: pointer !important;
+}
